--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Add this for better CommonJS/ES module interop */
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
