--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
+    "interact.js": "^1.2.8",
+    "interactjs": "^1.10.27",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
